--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,23 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool First Webpage</title>
+    <title>Ifeanyi Portfolio</title>
 </head>
 <body>
+    <!-- ===== HEADER ===== -->
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <h1>My First ALX Webpage</h1>
-    <h2>Learning Basic HTML Structure</h2>
-    <h3>Understanding Tags and Elements</h3>
+    <!-- ===== MAIN ===== -->
+    <main>
 
-    <p>This is my first paragraph, introducing the page content.</p>
-    <p>This is my second paragraph, explaining what I am learning.</p>
-    <p>This is my third paragraph, showing how HTML is structured.</p>
-    <p>This is my fourth paragraph, completing the ALX requirements.</p>
+        <!-- ===== ARTICLE (YOUR CONTENT GOES HERE) ===== -->
+        <article>
+            <h1>HEY! I AM IFEANYI</h1>
+            <h2>A FRONTEND WEB DEVELOPER (IN PROGRESS)</h2>
 
-    <!-- Clickable image -->
-    <a href="https://www.alxafrica.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-    </a>
-     <a href="tweets.html">See My Tweets</a>
+            <p>
+                I'm Ifeanyi, a beginner frontend developer learning HTML, CSS, and JavaScript.
+                I enjoy building simple and clean web pages as I grow on my journey to becoming
+                a professional developer. Every day I improve my skills by working on small but
+                meaningful projects.
+            </p>
+
+            <h2>About Me</h2>
+            <p>
+                I am a passionate learner dedicated to mastering frontend development. I currently
+                focus on HTML, CSS, and JavaScript, building beginner projects that help me understand
+                how websites work. My goal is to write clean code and create responsive layouts.
+            </p>
+
+            <h3>My Current Skills</h3>
+            <ul>
+                <li>HTML – 85%</li>
+                <li>CSS – 75%</li>
+                <li>JavaScript – 45%</li>
+            </ul>
+
+            <h2>Featured Projects</h2>
+            <ul>
+                <li>Basic Portfolio Website – HTML & CSS</li>
+                <li>Interactive Button Project – JavaScript</li>
+                <li>Simple Landing Page – Responsive Layout</li>
+            </ul>
+
+            <h2>Contact Me</h2>
+            <p>If you want to collaborate or need a simple beginner-friendly website, I’m available.</p>
+        </article>
+
+        <!-- ===== ASIDE ===== -->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <!-- ===== FOOTER ===== -->
+    <footer>
+        <p>Made by OKEKE IFEANYI MICHEAL - <a href="https://alx_africa.com" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
