--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,14 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base Index</title>
+    <title>Ifeanyi Tweets</title>
 </head>
 <body>
-<blockquote class="twitter-tweet">
-  <p lang="en" dir="ltr">Excited to start my ALX journey! 🚀</p>&mdash; Your Name (@yourhandle) 
-  <a href="https://twitter.com/yourhandle/status/1234567890123456789?ref_src=twsrc%5Etfw">Nov 20, 2025</a>
-</blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<a href="index.html">Back to Homepage</a>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <h1>My Tweet Section</h1>
+
+            <p>Below is an embedded tweet:</p>
+
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning HTML basics at ALX! 🚀</p>
+                — Ifeanyi (@ifeanyi)
+                <a href="https://twitter.com/yourtweet">Tweet Link</a>
+            </blockquote>
+
+            <script async src="https://platform.twitter.com/widgets.js"></script>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by OKEKE IFEANYI MICHEAL - <a href="https://alx_africa.com" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
+
