--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -16,8 +16,9 @@
     <main>
         <article>
             <h1>My Tweet Section</h1>
-
+            
             <p>Below is an embedded tweet:</p>
+            <a href="index.html">Back to Homepage</a>
 
             <blockquote class="twitter-tweet">
                 <p lang="en" dir="ltr">Learning HTML basics at ALX! 🚀</p>
@@ -36,6 +37,7 @@
     <footer>
         <p>Made by OKEKE IFEANYI MICHEAL - <a href="https://alx_africa.com" target="_blank">here</a></p>
     </footer>
+    <a href="index.html">Back to Homepage</a>
 </body>
 </html>
 
