--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -49,11 +49,45 @@
                 <li>Interactive Button Project – JavaScript</li>
                 <li>Simple Landing Page – Responsive Layout</li>
             </ul>
-
+            
             <h2>Contact Me</h2>
             <p>If you want to collaborate or need a simple beginner-friendly website, I’m available.</p>
             
             <a href="tweets.html">See My Tweets</a>
+
+            <!-- ===== LEARNERS TABLE (ALX TASK 4) ===== -->
+            <h2>Some Learners</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
         </article>
 
         <!-- ===== ASIDE ===== -->
@@ -68,3 +102,4 @@
     </footer>
 </body>
 </html>
+
