--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,95 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Okeke Ifeanyi Micheal - Personal Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ifeanyi Portfolio</title>
 </head>
 <body>
-
     <!-- ===== HEADER ===== -->
     <header>
-        <h1>Okeke Ifeanyi Micheal</h1>
-        <p>Passionate Frontend Developer | Learning HTML, CSS & JavaScript</p>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
     </header>
 
-    <!-- ===== NAVIGATION ===== -->
-    <nav>
-        <ul>
-            <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <!-- ===== MAIN ===== -->
+    <main>
 
-    <!-- ===== INTRODUCTION ===== -->
-    <section id="introduction">
-        <h2>Introduction</h2>
-        <p>
-            Hello! I'm Ifeanyi, a beginner frontend developer passionate about creating
-            clean, responsive websites. I enjoy building small projects to strengthen
-            my HTML, CSS, and JavaScript skills while continuously learning new technologies.
-        </p>
-    </section>
+        <!-- ===== ARTICLE (YOUR CONTENT GOES HERE) ===== -->
+        <article>
+            <h1>HEY! I AM IFEANYI</h1>
+            <h2>A FRONTEND WEB DEVELOPER (IN PROGRESS)</h2>
 
-    <!-- ===== PROJECTS ===== -->
-    <section id="projects">
-        <h2>Projects</h2>
+            <p>
+                I'm Ifeanyi, a beginner frontend developer learning HTML, CSS, and JavaScript.
+                I enjoy building simple and clean web pages as I grow on my journey to becoming
+                a professional developer. Every day I improve my skills by working on small but
+                meaningful projects.
+            </p>
 
-        <article class="project">
-            <h3>Basic Portfolio Website</h3>
-            <p>A simple portfolio website built using HTML & CSS to showcase my skills and projects.</p>
-            <a href="#" target="_blank">View Project</a>
+            <h2>About Me</h2>
+            <p>
+                I am a passionate learner dedicated to mastering frontend development. I currently
+                focus on HTML, CSS, and JavaScript, building beginner projects that help me understand
+                how websites work. My goal is to write clean code and create responsive layouts.
+            </p>
+
+            <h3>My Current Skills</h3>
+            <ul>
+                <li>HTML – 85%</li>
+                <li>CSS – 75%</li>
+                <li>JavaScript – 45%</li>
+            </ul>
+
+            <h2>Featured Projects</h2>
+            <ul>
+                <li>Basic Portfolio Website – HTML & CSS</li>
+                <li>Interactive Button Project – JavaScript</li>
+                <li>Simple Landing Page – Responsive Layout</li>
+            </ul>
+
+            <h2>Contact Me</h2>
+            <p>If you want to collaborate or need a simple beginner-friendly website, I am available.</p>
+
+            <a href="tweets.html">See My Tweets</a>
         </article>
 
-        <article class="project">
-            <h3>Interactive Button Project</h3>
-            <p>A project where I built interactive buttons using JavaScript to learn DOM manipulation.</p>
-            <a href="#" target="_blank">View Project</a>
-        </article>
-
-        <article class="project">
-            <h3>Responsive Landing Page</h3>
-            <p>A responsive landing page project demonstrating my ability to create layouts that adapt to different screen sizes.</p>
-            <a href="#" target="_blank">View Project</a>
-        </article>
-
-    </section>
-
-    <!-- ===== ABOUT ME ===== -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am a motivated learner exploring frontend development. I am familiar with HTML, CSS, and JavaScript, and I am building projects to improve my coding skills.</p>
-        <p>My goal is to create functional, responsive websites while continuously learning new tools and best practices in web development.</p>
-        <h3>Skills</h3>
-        <ul>
-            <li>HTML – 85%</li>
-            <li>CSS – 75%</li>
-            <li>JavaScript – 45%</li>
-        </ul>
-        <h3>Hobbies</h3>
-        <ul>
-            <li>Learning new web technologies</li>
-            <li>Building small web projects</li>
-            <li>Exploring programming challenges</li>
-        </ul>
-    </section>
-
-    <!-- ===== CONTACT ===== -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:okekeifeanyi288@gmail.com">okekeifeanyi288@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/okekeifeanyi" target="_blank">My LinkedIn</a></p>
-        <p>GitHub: <a href="https://github.com/okekeifeanyi" target="_blank">My GitHub</a></p>
-    </section>
+        <!-- ===== ASIDE ===== -->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
     <!-- ===== FOOTER ===== -->
     <footer>
-        <p>&copy; 2025 Okeke Ifeanyi Micheal</p>
+        <p>Made by OKEKE IFEANYI MICHEAL - <a href="https://alx_africa.com" target="_blank">here</a></p>
     </footer>
-
 </body>
 </html>
 
+    
+
+</body>
+</html>
